# SubdivisionQuadEdgeMeshFilter2

./: CMakeLists.txt  README.md
Source/: itkCellSubdivisionQuadEdgeMeshFilter.h  itkCellSubdivisionQuadEdgeMeshFilter.hxx  itkConditionalCellSubdivisionQuadEdgeMeshFilter.h  itkConditionalCellSubdivisionQuadEdgeMeshFilter.hxx  itkConditionalEdgeCellSubdivisionQuadEdgeMeshFilter.h  itkConditionalEdgeCellSubdivisionQuadEdgeMeshFilter.hxx  itkEdgeCellSubdivisionQuadEdgeMeshFilter.h  itkEdgeCellSubdivisionQuadEdgeMeshFilter.hxx  itkEdgeLengthEdgeCellSubdivisionCriterion.h  itkEdgeLengthEdgeCellSubdivisionCriterion.hxx  itkIterativeCellSubdivisionQuadEdgeMeshFilter.h  itkIterativeCellSubdivisionQuadEdgeMeshFilter.hxx  itkLinearTriangleCellSubdivisionQuadEdgeMeshFilter.h  itkLinearTriangleCellSubdivisionQuadEdgeMeshFilter.hxx  itkLinearTriangleEdgeCellSubdivisionQuadEdgeMeshFilter.h  itkLinearTriangleEdgeCellSubdivisionQuadEdgeMeshFilter.hxx  itkLoopTriangleCellSubdivisionQuadEdgeMeshFilter.h  itkLoopTriangleCellSubdivisionQuadEdgeMeshFilter.hxx  itkLoopTriangleEdgeCellSubdivisionQuadEdgeMeshFilter.h  itkLoopTriangleEdgeCellSubdivisionQuadEdgeMeshFilter.hxx  itkModifiedButterflyTriangleCellSubdivisionQuadEdgeMeshFilter.h  itkModifiedButterflyTriangleCellSubdivisionQuadEdgeMeshFilter.hxx  itkModifiedButterflyTriangleEdgeCellSubdivisionQuadEdgeMeshFilter.h  itkModifiedButterflyTriangleEdgeCellSubdivisionQuadEdgeMeshFilter.hxx  itkQuadEdgeMeshCellSubdivisionCriterion.h  itkQuadEdgeMeshEdgeCellSubdivisionCriterion.h  itkSquareThreeTriangleCellSubdivisionQuadEdgeMeshFilter.h  itkSubdivisionQuadEdgeMeshFilter.h  itkSubdivisionQuadEdgeMeshFilter.hxx  itkTriangleAreaCellSubdivisionCriterion.h  itkTriangleAreaCellSubdivisionCriterion.hxx
Testing/: CMakeLists.txt  CriterionCellSubdivisionQuadEdgeMeshFilterTest.cxx  CriterionEdgeCellSubdivisionQuadEdgeMeshFilterTest.cxx  CriterionSubdivisionQuadEdgeMeshFilterTest.cxx  EdgeCellSubdivisionQuadEdgeMeshFilterTest.cxx  SubdivisionQuadEdgeMeshFilterTest.cxx
